tests/compile_fail/get_label_invalid_name.rs
skuld::get_label!(pub BAD, "bad-name");

fn main() {}
